--- a/favourite.movies/src/main/resources/application.properties
+++ b/favourite.movies/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
